# easybody

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  easybody  imgui.ini
include/GL/: gl3w.h
include/glad/: glad.h
src/: Main.cpp  gl3w.c  glad.c
src/Graphics/: Graphics.cpp  Graphics.hpp
